2020-07-24  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.4.1 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.4.1-dev, mingwrt-5.4.1-dll)
	(mingwrt-5.4.1-lic, mingwrt-5.4.1-man, libmingwex-5.3.4.1-dll-4)
	(libmingwex-5.4.1-dev, w32api-5.4.1-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-07-11  Keith Marshall  <keith@users.osdn.me>

	Update GCC-9.2 to remove obsolete dependencies.

	* mingw32/mingw32-gcc4.xml (gcc-lic, gcc-core-bin, gcc-info, gcc-man)
	(gcc-lang, libgcc-dll-1, gcc-ada-bin, libgnat-dll, gcc-c++-bin)
	(gcc-c++-man, libstdc++-dll-6, gcc-fortran-bin, gcc-fortran-info)
	(gcc-fortran-man, libgfortran-dll, gcc-objc-bin, libobjc-dll-4)
	(libatomic-dll-1, libgomp-dll-1, libssp-dll-1, libquadmath-dll-0)
	(libquadmath-info): Add release references for version 9.2.0-2.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-07-08  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.4 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.4-dev, mingwrt-5.4-dll)
	(mingwrt-5.4-lic, mingwrt-5.4-man, libmingwex-5.3.4-dll-4)
	(libmingwex-5.4-dev, w32api-5.4-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-07-06  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.4 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.4-dev, mingwrt-5.3.4-dll)
	(mingwrt-5.3.4-lic, mingwrt-5.3.4-man, libmingwex-5.3.4-dll-2)
	(libmingwex-5.3.4-dev, w32api-5.3.4-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-06-17  Keith Marshall  <keith@users.osdn.me>

	Improve support for out-of-tree catalogue generation.

	* Makefile.in: When running the testsuite, use ${abs_top_srcdir}
	references, rather than ${top_srcdir}; this is required, to ensure
	that testsuite path names are correctly resolved, when the build
	directory is not a subdirectory of ${top_srcdir}, (as is likely